--- a/planner for me/Other/GoogleService-Info.plist
+++ b/planner for me/Other/GoogleService-Info.plist
@@ -1,30 +1,1 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
-<dict>
-	<key>API_KEY</key>
-	<string>AIzaSyA89p_Ig5UO_c_JEYGMD5iJRTXWPYAf8EU</string>
-	<key>GCM_SENDER_ID</key>
-	<string>819125676249</string>
-	<key>PLIST_VERSION</key>
-	<string>1</string>
-	<key>BUNDLE_ID</key>
-	<string>sschmeil2211.planner-for-me</string>
-	<key>PROJECT_ID</key>
-	<string>planner-for-me</string>
-	<key>STORAGE_BUCKET</key>
-	<string>planner-for-me.appspot.com</string>
-	<key>IS_ADS_ENABLED</key>
-	<false></false>
-	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
-	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
-	<key>IS_GCM_ENABLED</key>
-	<true></true>
-	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
-	<key>GOOGLE_APP_ID</key>
-	<string>1:819125676249:ios:074aca66390e9d4ac876c8</string>
-</dict>
-</plist>
+//Use your own data from the Google service.
